# tui-downloader

./: Cargo.toml  LICENSE  README.md
src/: aria2.rs  download_manager.rs  input.rs  lib.rs  main.rs  models.rs  ui.rs
src/ui/: app.rs  mod.rs  theme.rs  utils.rs
src/ui/widgets/: details_panel.rs  downloads_list.rs  global_stats.rs  help_popup.rs  input_field.rs  mod.rs  popup.rs  search_bar.rs  shortcuts.rs  speed_limit_popup.rs  status_bar.rs  tabs.rs
