[package]
name = "tui-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "^0.26"
crossterm = "^0.27"
reqwest = { version = "^0.12", features = ["stream", "json"] }
tokio = { version = "^1", features = ["full"] }
futures = "^0.3"
aria2-ws = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
dirs = "5.0"
